Fixes double pixel border on bottom of citation add-on when it is collapsed.

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1866,6 +1866,9 @@ span#profileFullname{
     border:1px solid #ddd;
     margin-bottom: 20px;
 }
+.addon-widget-header.hide-border {
+  border-bottom: none;
+}
 .addon-widget-header {
     padding: 0 10px;
     border-bottom: 1px solid #ddd;
